<resources>
    <string name="app_name">login_registration_kotlin_firebase</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="loginNow">Click to Login Now</string>
    <string name="RegNow">Already have an account?</string>
    <string name="logout">Logout</string>
    <string name="Welcome">Home Page</string>
    <string name="login_button_description">Login button</string>

</resources>